--- a/PruebaMercadoLibre/Podfile
+++ b/PruebaMercadoLibre/Podfile
@@ -7,6 +7,7 @@ target 'PruebaMercadoLibre' do
 
   # Pods for PruebaMercadoLibre
   pod 'Alamofire', '~> 5.2'
+  pod 'AlamofireImage', '~> 4.1'
 
   target 'PruebaMercadoLibreTests' do
     inherit! :search_paths
